--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,12 +31,23 @@ pico_sdk_init()
 #Add an executable target to be build from the source files
 add_executable(2PORTmonitor 2PortMonitor.c)
 
+pico_generate_pio_header(2PORTmonitor ${CMAKE_CURRENT_LIST_DIR}/ws2812.pio OUTPUT_DIR ${CMAKE_CURRENT_LIST_DIR}/generated)
+
 #Pull in our pico_stdlib which aggregates commonly used features
 target_link_libraries(2PORTmonitor pico_stdlib hardware_adc hardware_pll hardware_clocks)
 
 #Enable USB output, disable UART output
 pico_enable_stdio_usb(2PORTmonitor 1)
 pico_enable_stdio_uart(2PORTmonitor 0)
+
+# Add any user requested libraries
+target_link_libraries(2PORTmonitor
+    pico_stdlib
+    hardware_pio
+    hardware_spi
+    hardware_adc
+    hardware_pll
+)
 
 #Create map/bin/hex/uf2 file etc.
 pico_add_extra_outputs(2PORTmonitor)
